@@ -1,3 +1,8 @@
+2002-01-11  Anders Carlsson  <andersca@gnu.org>
+
+	* panel-shell.c (panel_shell_register): Print out the error
+	code if the panel fails to register.
+
 2002-01-10  Padraig O'Briain  <padraig.obriain@sun.com>
 
 	* basep_widget.c
